--- a/MyDietSchedule/Controls/NoInternetDisplay.xaml
+++ b/MyDietSchedule/Controls/NoInternetDisplay.xaml
@@ -3,5 +3,5 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="MyDietSchedule.Controls.NoInternetDisplay"
              VerticalOptions="FillAndExpand">
-    <Label x:Name="lbl_NoInternet" Text="" HorizontalTextAlignment="Center" TextColor="Red"/>
+    <Label x:Name="lbl_NoInternet" Margin="0,0,0,-50" Text="" HorizontalTextAlignment="Center" TextColor="Black" BackgroundColor="Red" HorizontalOptions="FillAndExpand"/>
 </StackLayout>
