--- a/MyDietSchedule/App.xaml
+++ b/MyDietSchedule/App.xaml
@@ -3,5 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyDietSchedule.App">
     <Application.Resources>
+        <ResourceDictionary>
+            <Color x:Key="PrimaryColor">#3ec3d5</Color>
+            <Color x:Key="SecondayColor">White</Color>
+            <Color x:Key="BackgroundColor">#2f4259</Color>
+            <Color x:Key="DefaultColor">Black</Color>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
