--- a/MyDietSchedule/App.xaml
+++ b/MyDietSchedule/App.xaml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Application xmlns="http://xamarin.com/schemas/2014/forms" 
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyDietSchedule.App">
+<Application 
+    xmlns="http://xamarin.com/schemas/2014/forms" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+    x:Class="MyDietSchedule.App"
+    xmlns:theme="clr-namespace:MyDietSchedule.Utils.ResourceDictionaries">
     <Application.Resources>
-        <ResourceDictionary>
-            <Color x:Key="PrimaryColor">#3ec3d5</Color>
-            <Color x:Key="SecondayColor">White</Color>
-            <Color x:Key="BackgroundColor">#2f4259</Color>
-            <Color x:Key="DefaultColor">Black</Color>
-        </ResourceDictionary>
+        <ResourceDictionary MergedWith="theme:Colors" />
     </Application.Resources>
 </Application>
