--- a/MyDietSchedule/Controls/ErrorSection.xaml
+++ b/MyDietSchedule/Controls/ErrorSection.xaml
@@ -4,22 +4,15 @@
              x:Class="MyDietSchedule.Controls.ErrorSection"
              IsVisible="false"
              Margin="0,0,0,-5">
-    <Label 
-           Text="Errors:" 
-           FontSize="Small"
-           FontAttributes="Italic"
-           Margin="0,0,0,0"
-           TextColor="{StaticResource ErrorColor}"/>
 
     <ListView 
         SeparatorVisibility="None" 
-        BackgroundColor="{StaticResource BackgroundColor}"
         HasUnevenRows="true" 
         x:Name="ErrorList">
         <ListView.ItemTemplate>
           <DataTemplate>
             <ViewCell>
-                <Label Text="{Binding .}" VerticalTextAlignment="Center" FontSize="Small" TextColor="Red" />
+                <Label Text="{Binding .}" VerticalTextAlignment="Center" FontAttributes="Italic" FontSize="Small" TextColor="Red" />
             </ViewCell>
           </DataTemplate>
         </ListView.ItemTemplate>
